updating source code

--- a/SourceCode/src/styles/components/_indicator.scss
+++ b/SourceCode/src/styles/components/_indicator.scss
@@ -1,3 +1,10 @@
+.indicators{
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
 .indicator{
     height: 2rem;
     width: 2rem;
