--- a/SourceCode/src/styles/base/_base.scss
+++ b/SourceCode/src/styles/base/_base.scss
@@ -25,6 +25,6 @@ body{
     font-family: 'Inconsolata', monospace;
     font-size: 1.5rem; 
     max-height: inherit;
-    overflow: hidden;
+    overflow: scroll;
 }
 
