--- a/SourceCode/src/styles/components/_header.scss
+++ b/SourceCode/src/styles/components/_header.scss
@@ -39,7 +39,9 @@
         }
         &-dropdown{
             &-chev{
-                height: 2rem;
+                border-radius: 100%;
+                height: 1.5rem;
+                width: 2.8rem;
                 font-family: 'Dancing Script', cursive;
                 font-size: 3rem;
                 cursor: pointer;
