closing down project

--- a/SourceCode/styles/base/_base.scss
+++ b/SourceCode/styles/base/_base.scss
@@ -3,18 +3,29 @@
     padding: 0;
 }
 
-*,
-*::before,
-*::after{
-    box-sizing: inherit;
-}
 
 html{
     font-size: 62.5%;
+
     background-image: url('./images/cover.jpg');
     background-size: cover;
-    box-sizing: border-box;
-    max-height: inherit;
+    overflow: hidden;
+
+
+	@include respond(tab-land){
+		font-size: 56.25%;
+	}
+	@include respond(tab-port){
+        background-image: none;
+		font-size: 50%;
+	}
+	@include respond(phone){
+		font-size: 30%;
+	}
+	
+	@include respond(big-desk){
+        font-size: 75%;
+    }
 }
 
 
@@ -22,7 +33,10 @@ html{
 body{
     font-family: 'Inconsolata', monospace;
     font-size: 1.5rem; 
-    max-height: inherit;
-    overflow: scroll;
+    height:100vh;
+}
+
+#root{
+    height: 100%;
 }
 
