--- a/SourceCode/styles/base/_settings.scss
+++ b/SourceCode/styles/base/_settings.scss
@@ -4,3 +4,7 @@ $primary-col: #FB8847;
 $secondary-col : #FD792E;
 
 $contrast-col : #037295;
+
+$tab-font: 2.6rem;
+$mobile-font: 4rem;
+$mobile-font-header: 7rem;
