--- a/SourceCode/styles/components/_canvas.scss
+++ b/SourceCode/styles/components/_canvas.scss
@@ -1,7 +1,21 @@
 .canvas{
-    width: 100rem;
-    margin: 8rem auto;
+    width: 75%;
+    height: 100%;
+    margin: 4rem auto;
     background-color: rgba(255,249,239,.8);
-
     box-shadow: .1rem .1rem 2rem rgba(0,0,0,.5);
+    display: block;
+
+    @include respond(tab-port){
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
+    
+    &__flexboxContainer{
+        height: 100%;
+
+        display: flex;
+        flex-direction: column;
+    }
 }
