--- a/SourceCode/styles/components/_focus.scss
+++ b/SourceCode/styles/components/_focus.scss
@@ -1,18 +1,20 @@
 .focus{
-    min-height: 50rem;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
 
+    overflow: hidden;
+    margin: .5rem 0;
+    
     &__btnPanel{
-        width: 40rem;
         display: flex;
         justify-content: space-evenly;
-
+        align-items: center;
+        width:40%;
 
         &-tasks{
-            min-width: 10rem;
             color: $contrast-col;
             background-color: transparent;
 
@@ -25,4 +27,14 @@
             }
         }
     }
+
+    &__clock{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+.CircularProgressbar{
+    width: 90%!important;
 }
