--- a/SourceCode/styles/components/_footer.scss
+++ b/SourceCode/styles/components/_footer.scss
@@ -4,12 +4,22 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
-    height: 5rem;
     
+    height: 5rem;
+    @include respond(phone){
+        height: 10rem;
+    }
+    @include respond(phone-s){
+        height: 8rem;
+    }
     &__container{
         font-size: 2.5rem;
-        
+        @include respond(phone){
+            font-size: $mobile-font-header - 3;
+        }
+        @include respond(phone-s){
+            font-size: $mobile-font-header - 3.5;
+        }
         display: flex;
         justify-content: space-evenly;
         align-items: center;
