--- a/SourceCode/styles/components/_settings.scss
+++ b/SourceCode/styles/components/_settings.scss
@@ -1,21 +1,19 @@
 .settings{
-    min-height: 50rem;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: space-evenly;
     align-items: center;
 
     &__list{
-        min-height: 37rem;
-        margin: auto;
 
         &-item{
             border: 1px solid $contrast-col;
             border-radius: .5rem;
             padding: 1rem;
             margin: 1rem 0;
-            font-size: 2rem;
+            font-size: inherit;
             font-weight: 600;
             color: $contrast-col;
 
