--- a/SourceCode/styles/components/_tasks.scss
+++ b/SourceCode/styles/components/_tasks.scss
@@ -1,11 +1,10 @@
 .tasks{
-    min-height: 50rem;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-
     
     &__search{
         width: 42rem;
