--- a/SourceCode/styles/styles.scss
+++ b/SourceCode/styles/styles.scss
@@ -1,3 +1,4 @@
+@import './abstract/mixins';
 @import './base/settings';
 @import './base/base';
 @import './components/button';
@@ -14,4 +15,5 @@
 @import './components/prompt';
 @import './components/settings';
 @import './components/signin';
+@import './components/stats';
 @import './components/tasks';
