debugged no email prompt

--- a/SourceCode/styles/components/_dynamicload.scss
+++ b/SourceCode/styles/components/_dynamicload.scss
@@ -1,5 +1,5 @@
 .dynamicload{
-    min-height: 50rem;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
