--- a/RefactoredSource/styles/components/_settings.scss
+++ b/RefactoredSource/styles/components/_settings.scss
@@ -6,6 +6,8 @@
     justify-content: space-evenly;
     align-items: center;
 
+    overflow: scroll;
+    
     &__list{
         &-item{
             -webkit-font-smoothing: antialiased;
