--- a/RefactoredSource/styles/components/_signin.scss
+++ b/RefactoredSource/styles/components/_signin.scss
@@ -2,7 +2,7 @@
     height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     
     
@@ -24,25 +24,34 @@
 
         @include respond(tab-port){
             height: 50rem;
+            top: 25%;
             transform: rotate(90deg);
         }
     }
 
     &__create{
-        width: 30rem;
-        margin: 0 auto;
         display: flex;
         flex-direction: column;
     }
 
     &__login,&__reset,&__signup{
+        font-size: inherit;
         display: flex;
         flex-direction: column;
     }
 
     &__getin{
-        width: 30rem;
-        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        
+        @include respond(tab-port){
+            flex-direction: row;
+        }
+        @include respond(phone){
+            flex-direction: column;
+        }
     }
     &__getin>button{
         width: 18rem;
@@ -53,7 +62,8 @@
 
         background-color: #f2f7ff;
         border: none;
-        margin: 0 0 2rem 8rem;
+
+        margin: 1rem;
 
         color: $contrast-col;
         text-transform: uppercase;
@@ -158,6 +168,10 @@
     
             &:active{
                 transform: translateY(0rem);
+            }
+
+            @include respond(phone){
+                font-size: 2rem;
             }
         }
     }
