--- a/RefactoredSource/styles/components/_stats.scss
+++ b/RefactoredSource/styles/components/_stats.scss
@@ -4,30 +4,35 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    
+
     &__dashboard{
+        display: flex;
+        font-size: 2rem;
         margin-top: 1rem;
         & > *{
             margin: 0 .5rem;
         }
+        @include respond(tab-port){
+            font-size: 2.5rem;
+        }
         @include respond(phone){
             margin: .2rem;
+            font-size: 3rem;
         }
+
+        @include respond(phone-s){
+            font-size: 2.8rem;
+        }
+
+        
     }
 
-    &__rotate{
-        &-img{
-            height: 4rem;
-        }
-        display: none;
-
-        @include respond(phone){
-            display: block;
-        }
-    }
+    
     .doughnutChart{
-        height: 50rem;
+        height: 100%;
         width: 100%;
+
+        
     }
     &__chartboard {
         display: flex;
@@ -35,8 +40,6 @@
         justify-content: center;
         width: 60%;
         height: 70%;
-
-        
 
         @include respond(tab-port){
             width: 80%;
